crates/lang/macro/tests/ui/fail/C-15-payable-trait-constructor.rs
use pro_lang as pro;

#[pro::trait_definition]
pub trait Constructor {
    #[pro(constructor)]
    fn constructor() -> Self;
}

#[pro::contract]
mod noop {
    #[pro(storage)]
    pub struct Noop {}

    impl Constructor for Noop {
        #[pro(constructor, payable)]
        fn constructor() -> Self {
            Self {}
        }
    }

    impl Noop {
        #[pro(message)]
        pub fn noop(&self) {}
    }
}

fn main() {}
